--- a/WayToGlobe/authentication/templates/signup.html
+++ b/WayToGlobe/authentication/templates/signup.html
@@ -3,42 +3,325 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign up</title>
+    <title>Login</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            background: white;
+        }
+
+        .blue-background {
+            width: 990px;
+            height: 1135px;
+            left: 1161px;
+            top: 0;
+            position: absolute;
+            background: #05203C;
+        }
+
+        .signup-container {
+            width: 408px;
+            height: 412px;
+            left: 1336px;
+            top: 306px;
+            position: absolute;
+        }
+
+        .new-here {
+            width: 680px;
+            height: 157px;
+            left: 0;
+            top: 50px;
+            position: absolute;
+            text-align: center;
+            color: white;
+            font-size: 50px;
+            font-family: Inter, sans-serif;
+            font-weight: 700;
+            word-wrap: break-word;
+        }
+
+        .signup-text {
+            width: 680px;
+            height: 200px;
+            left: 0;
+            top: 169px;
+            position: absolute;
+            text-align: center;
+            color: white;
+            font-size: 27px;
+            font-family: Inter, sans-serif;
+            font-weight: 500;
+            word-wrap: break-word;
+        }
+
+        .signup-button-container {
+            width: 330px;
+            height: 67px;
+            left: 180px;
+            top: 300px;
+            position: absolute;
+            background: #D9D9D9;
+        }
+
+        .signup-button {
+            width: 330px;
+            height: 67px;
+            left: 0px;
+            top: 20px;
+            position: absolute;
+            text-align: center;
+            color: black;
+            font-size: 24px;
+            font-family: Inter, sans-serif;
+            font-weight: 700;
+            word-wrap: break-word;
+        }
+
+        .login-container {
+            width: 586px;
+            height: 597px;
+            left: 287px;
+            top: 261px;
+            position: absolute;
+        }
+
+        .login-title {
+            width: 586px;
+            height: 83px;
+            left: 0;
+            top: 0;
+            position: absolute;
+            text-align: center;
+            color: black;
+            font-size: 40px;
+            font-family: Inter, sans-serif;
+            font-weight: 700;
+            word-wrap: break-word;
+        }
+
+        .social-login {
+            width: 438px;
+            height: 33px;
+            left: 67px;
+            top: 80px;
+            position: absolute;
+            text-align: center;
+            color: black;
+            font-size: 20px;
+            font-family: Inter, sans-serif;
+            font-weight: 300;
+            word-wrap: break-word;
+        }
+
+        .email-label {
+            width: 252px;
+            height: 39px;
+            left: 20px;
+            top: 227px;
+            position: absolute;
+            text-align: center;
+            color: black;
+            font-size: 20px;
+            font-family: Inter, sans-serif;
+            font-weight: 300;
+            word-wrap: break-word;
+        }
+
+        .email-input {
+            width:360px;
+            height: 39px;
+            left: 20px;
+            top: 266px;
+            position: absolute;
+            text-align: center;
+            color: black;
+            font-size: 20px;
+            font-family: Inter, sans-serif;
+            font-weight: 300;
+            word-wrap: break-word;
+        }
+
+        .password-label {
+            width: 252px;
+            height: 39px;
+            left: 36px;
+            top: 358px;
+            position: absolute;
+            text-align: center;
+            color: black;
+            font-size: 20px;
+            font-family: Inter, sans-serif;
+            font-weight: 300;
+            word-wrap: break-word;
+        }
+
+        .password-input {
+            width: 334px;
+            height: 46px;
+            left: 119px;
+            top: 407px;
+            position: absolute;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end;
+            display: inline-flex;
+        }
+
+        .separator {
+            width: 331px;
+            height: 0px;
+            border: 1px black solid;
+        }
+
+        .signin-button-container {
+            width: 330px;
+            height: 67px;
+            left: 124px;
+            top: 487px;
+            position: absolute;
+            justify-content: center;
+            align-items: center;
+            display: inline-flex;
+        }
+
+        .signin-button {
+            width: 330px;
+            height: 57px;
+            margin-top: 420px;
+            margin-left:118px;
+            text-align: center;
+            color: white;
+            font-size: 24px;
+            font-family: Inter, sans-serif;
+            font-weight: 700;
+            word-wrap: break-word;
+            background: #0062E3;
+        
+        }
+
+        .social-icon {
+            width: 48px;
+            height: 48px;
+            position: absolute;
+            border-radius: 9999px;
+        }
+
+        .social-icon:first-child {
+            left: 218px;
+            top: 129px;
+        }
+
+        .social-icon:last-child {
+            left: 312px;
+            top: 129px;
+        }
+
+        .divider {
+            width: 142px;
+            height: 0px;
+            position: absolute;
+            border: 1px black solid;
+        }
+
+        .or-text {
+            width: 30px;
+            height: 31px;
+            left: 276px;
+            top: 197px;
+            position: absolute;
+            text-align: center;
+            color: black;
+            font-size: 20px;
+            font-family: Inter, sans-serif;
+            font-weight: 300;
+            word-wrap: break-word;
+        }
+
+        .forgot-password {
+            width: 206px;
+            height: 27px;
+            left: 276px;
+            top: 570px;
+            position: absolute;
+            justify-content: center;
+            align-items: center;
+            display: inline-flex;
+            text-align: center;
+            color: #353535;
+            font-size: 18px;
+            font-family: Inter, sans-serif;
+            font-weight: 300;
+            word-wrap: break-word;
+        }
+        .form-control
+        {
+            height:50px;
+            width:330px;
+            margin-left:100px;
+      
+        }
+    </style>
 </head>
 <body>
-    <div style="width: 100%; height: 100%; position: relative; background: white">
-        <div style="width: 990px; height: 1135px; left: 0px; top: 0px; right: px; position: absolute">
-            <div style="width: 991px; height: 1135px; left: 1161px; top: 0px; position: absolute; background: #05203C"></div>
-            <div style="width: 1161px; height: 1135px; left: 0px; top: 0px; position: absolute; background: #D9D9D9"></div>
-            <div style="width: 408px; height: 412px; left: 1336px; top: 306px; position: absolute">
-                <div style="width: 408px; height: 157px; left: 150px; top: 0px; position: absolute; text-align: center; color: white; font-size: 50px; font-family: Inter; font-weight: 700; word-wrap: break-word">Already have an account?</div>
-                <div style="width: 401px; height: 200px; left: 150px; top: 180px; position: absolute; text-align: center; color: white; font-size: 27px; font-family: Inter; font-weight: 500; word-wrap: break-word">Login again and discover a great amount of new opportunities!</div>
-                <div style="width: 330px; height: 67px; left: 170px; top: 345px; position: absolute; background: #D9D9D9; border-radius: 10px; border: 1px black solid"></div>
-                <div style="width: 329px; height: 67px; left: 170px; top: 370px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inter; font-weight: 300; line-height: 10px; word-wrap: break-word">Log in</div>
-            </div>
-            <div style="width: 675px; height: 776.76px; left: 243px; top: 158px; position: absolute">
-                <div style="width: 290.27px; height: 43.52px; left: 10px; top: 270px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Inter; font-weight: 300; word-wrap: break-word">Name</div>
-                <div style="width: 675px; height: 92.61px; left: 0px; top: 0px; position: absolute; text-align: center; color: black; font-size: 40px; font-family: Inter; font-weight: 700; word-wrap: break-word">Let’s Get Started!</div>
-                <div style="width: 504.52px; height: 36.82px; left: 77.18px; top: 89.26px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Inter; font-weight: 300; word-wrap: break-word">Signup using social networks</div>
-                <div style="width: 290.27px; height: 43.52px; left: 8px; top: 368px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Inter; font-weight: 300; word-wrap: break-word">Email</div>
-                <div style="width: 381.27px; height: 0px; left: 126px; top: 457px; position: absolute; border: 1px black solid"></div>
-                <div style="width: 381.27px; height: 0px; left: 126px; top: 350px; position: absolute; border: 1px black solid"></div>
-                <div style="width: 290.27px; height: 43.52px; left: 29px; top: 471px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Inter; font-weight: 300; word-wrap: break-word">Password</div>
-                <div style="width: 290.27px; height: 43.52px; left: 66px; top: 578px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Inter; font-weight: 300; word-wrap: break-word">Confirm Password</div>
-                <div style="width: 381.27px; height: 0px; left: 128px; top: 560px; position: absolute; border: 1px black solid"></div>
-                <div style="width: 381.27px; height: 0px; left: 128px; top: 661px; position: absolute; border: 1px black solid"></div>
-                <div style="width: 380.12px; height: 74.76px; left: 128px; top: 702px; position: absolute; background: #05203C; border-radius: 10px"></div>
-                <div style="width: 380.12px; height: 72.53px; left: 127px; top: 724px; position: absolute; text-align: center; color: white; font-size: 22px; font-family: Inter; font-weight: 300; word-wrap: break-word">Sign up</div>
-                <img style="width: 55.29px; height: 53.56px; left: 251.11px; top: 143.94px; position: absolute; border-radius: 9999px" src="https://via.placeholder.com/55x54" />
-                <img style="width: 55.29px; height: 53.56px; left: 359.39px; top: 143.94px; position: absolute" src="https://via.placeholder.com/55x54" />
-                <div style="width: 163.57px; height: 0px; left: 142.82px; top: 233.76px; position: absolute; border: 1px black solid"></div>
-                <div style="width: 163.57px; height: 0px; left: 359.38px; top: 234.93px; position: absolute; border: 1px black solid"></div>
-                <div style="width: 34.56px; height: 34.59px; left: 317.92px; top: 219.81px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Inter; font-weight: 300; word-wrap: break-word">OR</div>
+    <div class="container">
+        <div class="blue-background"></div>
+        <div class="signup-container">
+            <div class="new-here">Already have an Account?</div>
+            <div class="signup-text">Login Here!</div>
+            <div class="signup-button-container">
+                <div class="signup-button"><a href="{% url 'login' %}">Log in</a></div>
             </div>
         </div>
-        <div style="width: 382px; height: 41px; left: 370px; top: 459px; position: absolute; background: #D9D9D9"></div>
-        <div style="width: 382px; height: 41px; left: 371px; top: 652px; position: absolute; background: #D9D9D9"></div>
-        <div style="width: 382px; height: 41px; left: 381px; top: 780px; position: absolute; background: #D9D9D9"></div>
+        <div class="login-container">
+            <div class="login-title">Create Your Account</div>
+            <div class="social-login">Sign up using social networks</div>
+            <div class="separator" style="width: 334px; height: 46px; left: 407px; top: 527px;margin-top: 130px;margin-left:120px;">
+                {% load static %}
+            <img class="social-icon" src="{% static 'fb.png' %}" alt="Social Icon 1">
+            <div class="divider" style="left: 123.98px; top: 209.50px;"></div>
+            <div class="divider" style="left: 312px; top: 210.55px;"></div>
+            <div class="or-text">OR</div>
+            <img class="social-icon" src="https://via.placeholder.com/48x48" alt="Social Icon 2">
+        </div>
+        <form method="POST" action="{% url 'signup' %}" autocomplete="off">
+            {% csrf_token %}
+            
+            <div class="email-label">Email</div>
+            <div class="email-input">
+                <input style="font-size: x-large" type="text" class="form-control" name="{{ registration.email.name }}" id="email" required>
+            </div>
+        
+            <div class="email-label" style="margin-top: 100px; margin-left: 20px;">Username</div>
+            <div class="email-input">
+                <input style="font-size: x-large; margin-top: 100px;" type="text" class="form-control" name="{{ registration.username.name }}" id="username" required>
+            </div>
+        
+            <div class="password-label" style="margin-top: 70px; margin-left: 1px;">Password</div>
+            <div class="password-input">
+                <input style="font-size: x-large; margin-top: 100px;" type="password" class="form-control" name="{{ registration.password1.name }}" id="password" required>
+            </div>
+        
+            <div class="password-label" style="margin-top: 150px; margin-left: 35px;">Confirm Password</div>
+            <div class="password-input">
+                <input style="font-size: x-large; margin-top: 250px;" type="password" class="form-control" name="{{ registration.password2.name }}" id="confirm_password" required>
+            </div>
+        
+            <input class="signin-button-container" type="submit" value="Sign Up" style="font-family: sans-serif; font-weight: 700; background-color:#0062E3;color: white; font-weight: 300; margin-top: 100px; font-size: x-large; margin-left: -5px;">
+        
+        </form>
+            
+         
+           
+        </div>
+       
     </div>
 </body>
 </html>
