--- a/WayToGlobe/maininterface/templates/index.html
+++ b/WayToGlobe/maininterface/templates/index.html
@@ -10,46 +10,7 @@
 
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <div style="width: 100%; height: 100%; position: relative; background: white">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
-        <div style="width: 2253px; height: 1008px; left: -103px; top: 98px; position: absolute; background: #A7B3BF; border-radius: 60px"></div>
+        <div style="width: 2263px; height: 1008px; left: -103px; top: 98px; position: absolute; background: #A7B3BF; border-radius: 60px"></div>
         <div style="width: 2148px; height: 0px; left: 0px; top: 97px; position: absolute; border: 2px black solid"></div>
         <div style="width: 279px; height: 33px; left: 119px; top: 31px; position: absolute; color: black; font-size: 30px; font-family: Impact; font-weight: 400; word-wrap: break-word">Way To Globe</div>
         <div style="width: 130px; height: 33px; left: 465px; top: 28px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
@@ -97,7 +58,8 @@
         <div style="width: 890px; height: 168px; left: 515px; top: 157px; position: absolute; background: rgba(5, 32, 60, 0.80); border-radius: 84px"></div>
         <div style="width: 780px; height: 148px; left: 568px; top: 179px; position: absolute; text-align: center; color: white; font-size: 90px; font-family: Almendra SC; font-weight: 400; word-wrap: break-word">Good Evening!</div>
         <div style="width: 431px; height: 67px; left: 1166px; top: 372px; position: absolute; text-align: center; color: black; font-size: 50px; font-family: Inder; font-weight: 400; letter-spacing: 2px; word-wrap: break-word">WE RECOMMEND</div>
-        <div style="width: 1920px; height: 101px; left: -2px; top: -6px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
+        {% comment %} Menubar {% endcomment %}
+        <div style="width: 2160px; height: 101px; left: -2px; top: -6px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
         <div style="width: 752px; height: 425px; left: 173px; top: 372px; position: absolute; opacity: 0.40; background: rgba(26.18, 26.24, 27.82, 0.70); border-radius: 60px"></div>
         <div style="width: 717px; height: 324px; left: 208px; top: 410px; position: absolute">
             <img style="width: 366px; height: 324px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/366x324" />
