--- a/WayToGlobe/maininterface/templates/index.html
+++ b/WayToGlobe/maininterface/templates/index.html
@@ -10,8 +10,8 @@
 
 </head>
 <body>
-        <div style="width: 2263px; height: 1008px; left: -103px; top: 98px; position: absolute; background: #A7B3BF; border-radius: 60px"></div>
-        <div style="width: 2148px; height: 0px; left: 0px; top: 97px; position: absolute; border: 2px black solid"></div>
+        <div style="width: 2263px; height: 1045px; left: -103px; top: 98px; position: absolute; background: #A7B3BF;"></div>
+        <div style="width: 2160px; height: 0px; left: 0px; top: 97px; position: absolute; border: 2px black solid"></div>
         <div style="width: 279px; height: 33px; left: 119px; top: 31px; position: absolute; color: black; font-size: 30px; font-family: Impact; font-weight: 400; word-wrap: break-word">Way To Globe</div>
         <div style="width: 130px; height: 33px; left: 465px; top: 28px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 130px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Home</div>
@@ -39,6 +39,7 @@
                 </div>
                 <div style="width: 40.44px; height: 40px; left: 26.28px; top: 29px; position: absolute; background: black"></div>
             </div>
+          </div>
         </div>
         <div style="width: 220px; height: 33px; left: 598px; top: 28px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 220px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Place</div>
