--- a/WayToGlobe/maininterface/templates/search_car.html
+++ b/WayToGlobe/maininterface/templates/search_car.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div style="width: 1920px; height: 1080px; position: relative; background: white">
-        <div style="width: 1920px; height: 101px; left: 0px; top: 1px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
-        <div style="width: 1562px; height: 883px; left: 177px; top: 152px; position: absolute; background: #05203C"></div>
-        <div style="left: 822px; top: 207px; position: absolute; text-align: center; color: white; font-size: 36px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">Search for Cars</div>
+        <div style="width: 2160px; height: 101px; left: -2px; top: -6px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
+        <div style="width: 1562px; height: 883px; left: 300px; top: 152px; position: absolute; background: #05203C"></div>
+        <div style="left: 950px; top: 207px; position: absolute; text-align: center; color: white; font-size: 36px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">Search for Cars</div>
         <div style="width: 69px; height: 72px; padding-top: 36px; padding-left: 23px; left: 0px; top: 101px; position: absolute; flex-direction: column; justify-content: flex-end; align-items: center; display: inline-flex">
           <div style="width: 46px; height: 36px; background: black"></div>
         </div>
@@ -29,13 +29,13 @@
           <div style="width: 252px; height: 75px; left: 0px; top: 0px; position: absolute; background: #0062E3; border-radius: 7px; border: 3px #0062E3 solid"></div>
           <div style="left: 67px; top: 21px; position: absolute; color: black; font-size: 28px; font-family: Inter; font-weight: 700; word-wrap: break-word">SEARCH</div>
         </div>
-        <div style="width: 552px; height: 78.96px; left: 1020px; top: 296px; position: absolute">
-          <div style="width: 552px; height: 77px; left: 0px; top: 1px; position: absolute; background: white; border-radius: 10px; border: 2px black solid"></div>
-          <div style="width: 87.85px; height: 48.88px; left: 92px; top: 22px; position: absolute; color: #504A4A; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word">To</div>
-          <img style="width: 58.94px; height: 78.96px; left: 17px; top: 0px; position: absolute" src="https://via.placeholder.com/59x79" />
+        <div style="width: 552px; height: 78.96px; left: 1200px; top: 296px; position: absolute">
+            <div style="width: 552px; height: 77px; left: 0px; top: 1px; position: absolute; background: white; border-radius: 10px; border: 2px black solid"></div>
+            <input type="text" placeholder="To:" style="width: 400px; height: 40px; left: 100px; top: 20px; position: absolute; font-size: 18px; border: 1px solid #ccc; border-radius: 5px; padding: 5px;">
+            <img style="width: 58.94px; height: 78.96px; left: 17px; top: 0px; position: absolute" src="https://via.placeholder.com/59x79" />
         </div>
         <div style="width: 1953px; height: 310px; left: 0px; top: 15px; position: absolute">
-          <div style="width: 1920.03px; height: 0px; left: 0px; top: 86px; position: absolute; border: 2px black solid"></div>
+          <div style="width: 2150px; height: 0px; left: 0px; top: 80px; position: absolute; border: 2px black solid"></div>
           <div style="width: 279px; height: 33px; left: 119px; top: 20px; position: absolute; color: black; font-size: 30px; font-family: Impact; font-weight: 400; word-wrap: break-word">Way To Globe</div>
           <div style="width: 130px; height: 33px; left: 465px; top: 17px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Home</div>
           <div style="width: 269px; height: 33px; left: 815px; top: 17px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Flight</div>
@@ -74,12 +74,12 @@
           <div style="width: 275px; height: 70px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
           <div style="left: 59.50px; top: 17.99px; position: absolute; color: #504A4A; font-size: 28px; font-family: Inter; font-weight: 600; word-wrap: break-word">mm/dd/yyy</div>
         </div>
-        <div style="width: 552px; height: 78.96px; left: 410px; top: 301px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
-          <div style="width: 552px; height: 78.96px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
-            <img style="width: 58.94px; height: 78.96px" src="https://via.placeholder.com/59x79" />
-            <div style="width: 552px; height: 77px; background: white; border-radius: 10px; border: 2px black solid"></div>
-            <div style="width: 87.85px; height: 48.88px; color: #504A4A; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word">From</div>
-          </div>
+        <div style="width: 552px; height: 78.96px; left: 500px; top: 301px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
+            <div style="width: 552px; height: 78.96px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
+                <img style="width: 58.94px; height: 78.96px" src="https://via.placeholder.com/59x79" />
+                <div style="width: 552px; height: 77px; background: white; border-radius: 10px; border: 2px black solid"></div>
+                <input type="text" placeholder="From:" style="width: 400px; height: 40px; left: 100px; top: 20px; position: absolute; font-size: 18px; border: 1px solid #ccc; border-radius: 5px; padding: 5px;">
+            </div>
         </div>
       </div>
 </body>
