--- a/WayToGlobe/maininterface/templates/index.html
+++ b/WayToGlobe/maininterface/templates/index.html
@@ -4,12 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/datepickerjs@1.0.1/dist/datepicker.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  
 </head>
+<style>
+    .dropbtn {
+    background-color: rgba(5, 32, 60, 0.80);
+    border-radius: 20px;
+      color: white;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+    }
+    
+    .dropdown {
+        border-radius: 20px;
+      position: relative;
+      display: inline-block;
+    }
+    
+    .dropdown-content {
+        border-radius: 20px;
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+    
+    .dropdown-content a {
+        border-radius: 20px;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+    
+    .dropdown-content a:hover {background-color: #ddd;}
+    
+    .dropdown:hover .dropdown-content {display: block;}
+    
+    .dropdown:hover .dropbtn {background-color: #05203C;}
+    .mobile-container {
+  max-width: 480px;
+  margin: auto;
+  background-color: #555;
+  height: 500px;
+  color: white;
+  border-radius: 10px;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+.topnav #myLinks {
+  display: none;
+}
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color:  #05203C;
+  color: white;
+}
+    </style>
 <body>
+    
         <div style="width: 2263px; height: 1045px; left: -103px; top: 98px; position: absolute; background: #A7B3BF;"></div>
         <div style="width: 2160px; height: 0px; left: 0px; top: 97px; position: absolute; border: 2px black solid"></div>
         <div style="width: 279px; height: 33px; left: 119px; top: 31px; position: absolute; color: black; font-size: 30px; font-family: Impact; font-weight: 400; word-wrap: break-word">Way To Globe</div>
@@ -21,8 +104,8 @@
         </div>
         <div style="width: 295px; height: 304px; left: 1658px; top: 17px; position: absolute">
             <div style="width: 245px; height: 60px; left: 50px; top: 0px; position: absolute">
-                <div style="width: 229px; height: 33px; left: 16px; top: 8px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Settings</div>
-                <div style="width: 60px; height: 60px; left: 0px; top: 0px; position: absolute; background: black"></div>
+           
+               
             </div>
             <div style="width: 277px; height: 227px; left: 0px; top: 77px; position: absolute; opacity: 0">
                 <div style="width: 261.84px; height: 227px; left: 0px; top: 0px; position: absolute; background: #D9D9D9"></div>
@@ -42,7 +125,9 @@
           </div>
         </div>
         <div style="width: 220px; height: 33px; left: 598px; top: 28px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
-            <div style="width: 220px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Place</div>
+            <div style="width: 220px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word; position: relative; z-index: 999;">
+                <a href="{% url 'search_place'%}">Search Place</a>
+            </div>
         </div>
         <div style="width: 151px; height: 33px; left: 1269px; top: 25px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 151px; height: 33px; justify-content: center; align-items: center; display: inline-flex">
@@ -50,10 +135,12 @@
             </div>
         </div>
         <div style="width: 240px; height: 33px; left: 1040px; top: 25px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
-            <div style="width: 240px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Car</div>
+            <div style="width: 240px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word;z-index: 999;">
+                <a href="{% url 'search_car'%}">Search Car</a></div>
         </div>
         <div style="width: 81px; height: 72px; left: 20px; top: 11px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
         <div style="width: 92px; height: 24px; left: 14px; top: 34px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Imprima; font-weight: 400; word-wrap: break-word">Logo</div>
+      
         <div style="width: 24px; height: 24px; left: 684px; top: 339px; position: absolute"></div>
         <div style="width: 881px; height: 670px; left: 964px; top: 372px; position: absolute; opacity: 0.40; background: rgba(0, 0, 0, 0.70); border-radius: 60px"></div>
         <div style="width: 890px; height: 168px; left: 515px; top: 157px; position: absolute; background: rgba(5, 32, 60, 0.80); border-radius: 84px"></div>
@@ -69,8 +156,19 @@
             </div>
             <div style="width: 299px; height: 187px; left: 351px; top: 119px; position: absolute"><span style="color: black; font-size: 50px; font-family: Inder; font-weight: 400; word-wrap: break-word">17 May </span><span style="color: #EBB700; font-size: 50px; font-family: Inder; font-weight: 400; word-wrap: break-word">2018<br/>Thursday</span></div>
         </div>
+        
+        {% load static %}   
+        <div class="dropdown" style="margin-left:1500px;margin-top:20px;" >
+            <img src="{% static 'set.png' %}" alt="Settings Image" style="height: 50px; width: 60px;">
+            <button class="dropbtn" style="width:300px;">Settings</button>
+            <div class="dropdown-content" style="width:300px;margin-left:65px;">        
+                <a href="{% url 'login'%}">Logout</a>
+                <a href="{% url 'signup'%}">Account</a>
+                <a href="{% url 'login'%}">Themes</a>
+            </div>
+        </div>
         <div style="width: 69px; height: 72px; left: 0px; top: 97px; position: absolute">
-            <div style="width: 46px; height: 36px; left: 23px; top: 36px; position: absolute; background: black"></div>
+
         </div>
         <div style="width: 843px; height: 585px; left: 987px; top: 439px; position: absolute">
             <div style="width: 843px; height: 585px; left: 0px; top: 0px; position: absolute; background: #05203C; border-radius: 86px"></div>
@@ -78,5 +176,26 @@
             <div style="width: 766px; height: 45px; left: 56px; top: 56px; position: absolute; color: white; font-size: 50px; font-family: Inconsolata; font-weight: 700; word-wrap: break-word">Oceania Resort   $5000/night</div>
         </div>
     </div>
+    <div class="topnav" style="max-width:100%;margin-top: 10px;">
+        <a href="#home" class="active">Logo</a>
+        <div id="myLinks">
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars" style="font-size: 20px;">☰</i>
+        </a>
+      </div>
+      <script>
+        function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+        </script>
 </body>
 </html>
