--- a/WayToGlobe/maininterface/templates/search_place.html
+++ b/WayToGlobe/maininterface/templates/search_place.html
@@ -147,15 +147,15 @@
     <div style="width: 235.58px; height: 34.77px; left: 1023.80px; top: 31.61px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Car</div>
     <div style="width: 79.51px; height: 75.86px; left: 22.58px; top: 16.86px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
     <div style="width: 90.31px; height: 25.29px; left: 16.69px; top: 41.09px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Imprima; font-weight: 400; word-wrap: break-word">Logo</div>
-    <div class="topnav" style="max-width:98.5%;">
-        <a href="#home" class="active">Logo</a>
-        <div id="myLinks">
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+    <div class="topnav" style="max-width:10%;">
+        <a href="#home"  style="margin-left:100px;"></a>
+        <div id="myLinks" style="margin-top:15px;height:1000px;">
+          <a href="#news" style="margin-top:50px;font-size: x-large;">News</a>
+          <a href="#contact" style="margin-top:50px;font-size: x-large;">Contact</a>
+          <a href="#about" style="margin-top:50px;font-size: x-large;">About</a>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars" style="font-size: 20px;">☰</i>
+          <i class="fa fa-bars" style="font-size: x-large; position: relative;top:-15px;left: -150px;margin-left: 150px;">☰</i>
         </a>
       </div>
   <script>
