--- a/WayToGlobe/maininterface/templates/search_place2.html
+++ b/WayToGlobe/maininterface/templates/search_place2.html
@@ -142,12 +142,12 @@
     </style>
 </head>
 <body>
-    <!-- <div class="loading-container">
+    <div class="loading-container">
         <div>Loading...</div>
         <div class="loading-bar">
             <div class="loading-progress" id="loadingProgress"></div>
         </div>
-    </div> -->
+    </div>
 
     <div class="content">
 
