--- a/WayToGlobe/maininterface/templates/search_place2.html
+++ b/WayToGlobe/maininterface/templates/search_place2.html
@@ -189,9 +189,11 @@
             <img style="width: 645px; height: 392px; left: 278px; top: 257px; position: absolute; border-radius: 30px" src="{% static 'hotel1.avif' %}" />
             <img style="width: 588px; height: 392px; left: 985px; top: 256px; position: absolute; border-radius: 30px" src="{% static 'hotel2.avif' %}" />
             <div style="width: 247.36px; height: 79.02px; left: 676px; top: 823px; position: absolute; background: rgba(0, 110.09, 255, 0.33); border-radius: 7px; border: 3px black solid"></div>
-            <div style="width: 72px; height: 22px; left: 764px; top: 845px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">Book</div>
+            <div style="width: 72px; height: 22px; left: 764px; top: 845px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">
+                <a href="https://pchotels.com">Book</a></div>
             <div style="width: 247.36px; height: 79.02px; left: 1326px; top: 823px; position: absolute; background: rgba(0, 110.09, 255, 0.33); border-radius: 7px; border: 3px black solid"></div>
-            <div style="width: 72px; height: 22px; left: 1414px; top: 841px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">Book</div>
+            <div style="width: 72px; height: 22px; left: 1414px; top: 841px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">
+                <a href="https://waze.com/live-map/directions/pk/punjab/lahore/arif-hotel?to=place.ChIJQfitD5wcGTkRvzyz1Bpi_nw">Book</a></div>
             <div class="dropdown" style="margin-left:1500px;margin-top:20px;" >
                 <img src="{% static 'set.png' %}" alt="Settings Image" style="height: 50px; width: 60px;">  
                 <button class="dropbtn" style="width:300px;">Settings</button>   
@@ -204,9 +206,9 @@
             <div class="topnav" style="max-width:10%;">
                 <a href="#home"  style="margin-left:100px;"></a>
                 <div id="myLinks" style="margin-top:15px;height:1000px;">
-                  <a href="#news" style="margin-top:50px;font-size: x-large;">News</a>
-                  <a href="#contact" style="margin-top:50px;font-size: x-large;">Contact</a>
-                  <a href="#about" style="margin-top:50px;font-size: x-large;">About</a>
+                    <a href="#news" style="margin-top:50px;font-size: x-large;">Cheap Rides to Lahore</a>
+                    <a href="#contact" style="margin-top:50px;font-size: x-large;">Flights to Karachi Increase 10%</a>
+                    <a href="#about" style="margin-top:50px;font-size: x-large;">Ever Tried Yango?</a>
                 </div>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars" style="font-size: x-large; position: relative;top:-15px;left: -150px;margin-left: 150px;">☰</i>
