--- a/WayToGlobe/maininterface/templates/index.html
+++ b/WayToGlobe/maininterface/templates/index.html
@@ -90,6 +90,26 @@
   background-color:  #05203C;
   color: white;
 }
+.live-time {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 386px;
+        height: 119px;
+        left: 331px;
+        top: 0;
+        position: absolute;
+        color:black;
+    }
+
+    .date-info {
+        color:black;
+        width: 299px;
+        height: 187px;
+        left: 351px;
+        top: 119px;
+        position: absolute;
+    }
     </style>
 <body>
     
@@ -150,11 +170,10 @@
         <div style="width: 2160px; height: 101px; left: -2px; top: -6px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
         <div style="width: 752px; height: 425px; left: 173px; top: 372px; position: absolute; opacity: 0.40; background: rgba(26.18, 26.24, 27.82, 0.70); border-radius: 60px"></div>
         <div style="width: 717px; height: 324px; left: 208px; top: 410px; position: absolute">
-            <img style="width: 366px; height: 324px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/366x324" />
-            <div style="width: 386px; height: 119px; left: 331px; top: 0px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
-                <div style="width: 386px; height: 119px"><span style="color: black; font-size: 90px; font-family: Inder; font-weight: 400; word-wrap: break-word">8</span><span style="color: #EBB700; font-size: 90px; font-family: Inder; font-weight: 400; word-wrap: break-word">:</span><span style="color: black; font-size: 90px; font-family: Inder; font-weight: 400; word-wrap: break-word">57 </span><span style="color: #EBB700; font-size: 90px; font-family: Inder; font-weight: 400; word-wrap: break-word">pm</span></div>
-            </div>
-            <div style="width: 299px; height: 187px; left: 351px; top: 119px; position: absolute"><span style="color: black; font-size: 50px; font-family: Inder; font-weight: 400; word-wrap: break-word">17 May </span><span style="color: #EBB700; font-size: 50px; font-family: Inder; font-weight: 400; word-wrap: break-word">2018<br/>Thursday</span></div>
+            {% load static %}
+            <img style="width: 355px; height: 324px; left: 0px; top: 0px; position: absolute;border-radius: 350px;;" src="{% static 'clock.avif' %}" />
+            <div class="live-time" style="color:black;" id="liveTime"></div>
+    <div class="date-info"  style="color:black;" id="dateInfo"></div>
         </div>
         
         {% load static %}   
@@ -172,22 +191,54 @@
         </div>
         <div style="width: 843px; height: 585px; left: 987px; top: 439px; position: absolute">
             <div style="width: 843px; height: 585px; left: 0px; top: 0px; position: absolute; background: #05203C; border-radius: 86px"></div>
-            <img style="width: 810px; height: 449px; left: 17px; top: 115px; position: absolute; border-radius: 124px" src="https://via.placeholder.com/810x449" />
+            <img style="width: 810px; height: 449px; left: 17px; top: 115px; position: absolute; border-radius: 124px" src="{% static 'hm1.jpg' %}" />
             <div style="width: 766px; height: 45px; left: 56px; top: 56px; position: absolute; color: white; font-size: 50px; font-family: Inconsolata; font-weight: 700; word-wrap: break-word">Oceania Resort   $5000/night</div>
         </div>
     </div>
-    <div class="topnav" style="max-width:100%;margin-top: 10px;">
-        <a href="#home" class="active">Logo</a>
-        <div id="myLinks">
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+    <div class="topnav" style="max-width:10%;">
+        <a href="#home"  style="margin-left:100px;"></a>
+        <div id="myLinks" style="margin-top:15px;height:1000px;">
+            <a href="#news" style="margin-top:50px;font-size: x-large;">Cheap Rides to Lahore</a>
+            <a href="#contact" style="margin-top:50px;font-size: x-large;">Flights to Karachi Increase 10%</a>
+            <a href="#about" style="margin-top:50px;font-size: x-large;">Ever Tried Yango?</a>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars" style="font-size: 20px;">☰</i>
+          <i class="fa fa-bars" style="font-size: x-large; position: relative;top:-15px;left: -150px;margin-left: 150px;">☰</i>
         </a>
       </div>
       <script>
+         function updateTime() {
+            var timeElement = document.getElementById("liveTime");
+            var dateElement = document.getElementById("dateInfo");
+
+            var now = new Date();
+            var hours = now.getHours();
+            var minutes = now.getMinutes();
+            var ampm = hours >= 12 ? 'pm' : 'am';
+
+            hours = hours % 12;
+            hours = hours ? hours : 12; // Handle midnight (12:00 am)
+            minutes = minutes < 10 ? '0' + minutes : minutes;
+
+            timeElement.innerHTML = `<span style="color: black; font-size: 90px; font-family: Inder; font-weight: 400;">${hours}</span>` +
+                                    `<span style="color: black; font-size: 90px; font-family: Inder; font-weight: 400;">:</span>` +
+                                    `<span style="color: black; font-size: 90px; font-family: Inder; font-weight: 400;">${minutes}</span>` +
+                                    `<span style="color: black; font-size: 90px; font-family: Inder; font-weight: 400;">${ampm}</span>`;
+
+            var dayNames = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+            var monthNames = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
+
+            var day = dayNames[now.getDay()];
+            var month = monthNames[now.getMonth()];
+            var date = now.getDate();
+            var year = now.getFullYear();
+
+            dateElement.innerHTML = `<span style="color: black; font-size: 50px; font-family: Inder; font-weight: 400;">${date} ${month} </span>` +
+                                    `<span style="color:black; font-size: 50px; font-family: Inder; font-weight: 400;">${year}<br/>${day}</span>`;
+        }
+
+        setInterval(updateTime, 1000); // Update time every second
+        updateTime(); // Initial call to set the time immediately
         function myFunction() {
           var x = document.getElementById("myLinks");
           if (x.style.display === "block") {
