--- a/WayToGlobe/maininterface/templates/search_car.html
+++ b/WayToGlobe/maininterface/templates/search_car.html
@@ -3,15 +3,171 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/datepickerjs@1.0.1/dist/datepicker.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/datepickerjs@1.0.1/dist/datepicker.min.js"></script>
     <title>Document</title>
 </head>
+<style>
+     .autocomplete {
+            position: relative;
+            display: inline-block;
+        }
+
+        input[type="text"] {
+            width: 400px;
+            height: 40px;
+            font-size: 18px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 5px;
+        }
+
+        .autocomplete-dropdown {
+            position: absolute;
+            top: 50px; /* Adjust the distance from the input */
+            left: 0;
+            background-color: white;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            display: none;
+            z-index: 1;
+        }
+
+        .autocomplete-dropdown a {
+            padding: 10px;
+            display: block;
+            text-decoration: none;
+            color: black;
+            cursor: pointer;
+        }
+        .time-selector {
+            position: relative;
+            display: inline-block;
+        }
+
+        .time-selector input {
+            width: 100px;
+            height: 40px;
+            font-size: 16px;
+            padding: 5px;
+            margin-right: 10px;
+        }
+
+        .time-selector .clock {
+            position: absolute;
+            display: none;
+            width: 200px;
+            background-color: white;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 10px;
+            z-index: 1;
+        }
+
+        .time-selector .clock.active {
+            display: block;
+        }
+
+        .clock button {
+            width: 40px;
+            height: 40px;
+            margin: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .dropbtn {
+    background-color: rgba(5, 32, 60, 0.80);
+    border-radius: 20px;
+      color: white;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+    }
+    
+    .dropdown {
+        border-radius: 20px;
+      position: relative;
+      display: inline-block;
+    }
+    
+    .dropdown-content {
+        border-radius: 20px;
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+    
+    .dropdown-content a {
+        border-radius: 20px;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+    
+    .dropdown-content a:hover {background-color: #ddd;}
+    
+    .dropdown:hover .dropdown-content {display: block;}
+    
+    .dropdown:hover .dropbtn {background-color: #05203C;}
+    .clickable {
+            cursor: pointer;
+        }
+        .mobile-container {
+  max-width: 480px;
+  margin: auto;
+  background-color: #555;
+  height: 500px;
+  color: white;
+  border-radius: 10px;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+.topnav #myLinks {
+  display: none;
+}
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color:  #05203C;
+  color: white;
+}
+</style>
 <body>
     <div style="width: 1920px; height: 1080px; position: relative; background: white">
         <div style="width: 2160px; height: 101px; left: -2px; top: -6px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
         <div style="width: 1562px; height: 883px; left: 300px; top: 152px; position: absolute; background: #05203C"></div>
         <div style="left: 950px; top: 207px; position: absolute; text-align: center; color: white; font-size: 36px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">Search for Cars</div>
         <div style="width: 69px; height: 72px; padding-top: 36px; padding-left: 23px; left: 0px; top: 101px; position: absolute; flex-direction: column; justify-content: flex-end; align-items: center; display: inline-flex">
-          <div style="width: 46px; height: 36px; background: black"></div>
+
         </div>
         <div style="width: 275px; height: 70px; left: 532px; top: 640px; position: absolute">
           <div style="width: 275px; height: 70px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
@@ -21,33 +177,60 @@
           <div style="width: 275px; height: 70px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
           <div style="left: 84px; top: 15px; position: absolute; color: #504A4A; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word">--:-- --</div>
         </div>
-        <div style="left: 571px; top: 579px; position: absolute; color: white; font-size: 26px; font-family: Inter; font-weight: 700; word-wrap: break-word">Departure Time</div>
-        <div style="left: 1187px; top: 579px; position: absolute; color: white; font-size: 26px; font-family: Inter; font-weight: 700; word-wrap: break-word">Arrival Time</div>
+        <div class="time-selector" style="left: 571px; top: 579px; position: absolute;margin-top:70px;margin-left:-30px;">
+          <input type="text" style="width:250px;" placeholder="Select Time" onclick="showClock('departure')">
+          <div id="departureClock"  class="clock">
+              <!-- Clock for departure time -->
+              <!-- You can customize or replace this part with a clock picker library -->
+              <button onclick="selectTime('departure', '12:00')">12:00</button>
+              <button onclick="selectTime('departure', '15:00')">15:00</button>
+              <button onclick="selectTime('departure', '18:00')">18:00</button>
+              <!-- Add more buttons for other times -->
+          </div>
+      </div>
+      <div class="time-selector" style="left: 1187px; top: 579px; position: absolute;margin-top:70px;margin-left:-57px;">
+        <input type="text"  style="width:250px;" placeholder="Select Time" onclick="showClock('arrival')">
+        <div id="arrivalClock" class="clock">
+            <!-- Clock for arrival time -->
+            <!-- You can customize or replace this part with a clock picker library -->
+            <button onclick="selectTime('arrival', '12:00')">12:00</button>
+            <button onclick="selectTime('arrival', '15:00')">15:00</button>
+            <button onclick="selectTime('arrival', '18:00')">18:00</button>
+            <!-- Add more buttons for other times -->
+        </div>
+    </div>
         <div style="left: 565px; top: 420px; position: absolute; color: white; font-size: 26px; font-family: Inter; font-weight: 700; word-wrap: break-word">Departure Date</div>
         <div style="left: 1187px; top: 420px; position: absolute; color: white; font-size: 26px; font-family: Inter; font-weight: 700; word-wrap: break-word">Arrival Date</div>
         <div style="width: 252px; height: 75px; left: 836px; top: 797px; position: absolute">
           <div style="width: 252px; height: 75px; left: 0px; top: 0px; position: absolute; background: #0062E3; border-radius: 7px; border: 3px #0062E3 solid"></div>
-          <div style="left: 67px; top: 21px; position: absolute; color: black; font-size: 28px; font-family: Inter; font-weight: 700; word-wrap: break-word">SEARCH</div>
+          <div style="left: 67px; top: 21px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; word-wrap: break-word">
+            <a href="{% url 'search_car2'%}">Search</a></div>
         </div>
-        <div style="width: 552px; height: 78.96px; left: 1200px; top: 296px; position: absolute">
-            <div style="width: 552px; height: 77px; left: 0px; top: 1px; position: absolute; background: white; border-radius: 10px; border: 2px black solid"></div>
-            <input type="text" placeholder="To:" style="width: 400px; height: 40px; left: 100px; top: 20px; position: absolute; font-size: 18px; border: 1px solid #ccc; border-radius: 5px; padding: 5px;">
-            <img style="width: 58.94px; height: 78.96px; left: 17px; top: 0px; position: absolute" src="https://via.placeholder.com/59x79" />
-        </div>
+  
+        <div class="autocomplete" style="width: 552px; height: 78.96px; left: 1200px; top: 296px; position: absolute;margin-top:5px;">
+          <input id="cityToInput"style="height:60px;width:535px;" type="text" placeholder="To:" onfocus="showDropdownTo()">
+          <div id="cityToDropdown" class="autocomplete-dropdown">
+              <a href="#" onclick="selectCityTo('Karachi')">Karachi</a>
+              <a href="#" onclick="selectCityTo('Lahore')">Lahore</a>
+              <a href="#" onclick="selectCityTo('Islamabad')">Islamabad</a>   
+          </div>
+     </div>
+      <img style="width: 58.94px; height: 78.96px; left: 17px; top: 0px; position: absolute" src="https://via.placeholder.com/59x79" />
         <div style="width: 1953px; height: 310px; left: 0px; top: 15px; position: absolute">
           <div style="width: 2150px; height: 0px; left: 0px; top: 80px; position: absolute; border: 2px black solid"></div>
           <div style="width: 279px; height: 33px; left: 119px; top: 20px; position: absolute; color: black; font-size: 30px; font-family: Impact; font-weight: 400; word-wrap: break-word">Way To Globe</div>
-          <div style="width: 130px; height: 33px; left: 465px; top: 17px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Home</div>
+          <div style="width: 130px; height: 33px; left: 465px; top: 17px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">
+            <a href="{% url 'main_interface'%}">Home</a></div>
           <div style="width: 269px; height: 33px; left: 815px; top: 17px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Flight</div>
-          <div style="width: 220px; height: 33px; left: 598px; top: 17px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Place</div>
+          <div style="width: 220px; height: 33px; left: 598px; top: 17px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">
+            <a href="{% url 'search_place'%}">Search Place</a></div>
           <div style="width: 220px; height: 33px; left: 1235px; top: 14px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">About Us</div>
           <div style="width: 240px; height: 33px; left: 1040px; top: 14px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Car</div>
           <div style="width: 81px; height: 72px; left: 20px; top: 0px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
           <div style="width: 92px; height: 24px; left: 14px; top: 23px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Imprima; font-weight: 400; word-wrap: break-word">Logo</div>
           <div style="width: 295px; height: 304px; left: 1658px; top: 6px; position: absolute">
             <div style="width: 245px; height: 60px; left: 50px; top: 0px; position: absolute">
-              <div style="width: 229px; height: 33px; left: 16px; top: 8px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Settings</div>
-              <div style="width: 60px; height: 60px; left: 0px; top: 0px; position: absolute; background: black"></div>
+
             </div>
             <div style="width: 277px; height: 227px; left: 0px; top: 77px; position: absolute; opacity: 0">
               <div style="width: 261.84px; height: 227px; left: 0px; top: 0px; position: absolute; background: #D9D9D9"></div>
@@ -66,21 +249,114 @@
             </div>
           </div>
         </div>
+        {% load static%}
+        <div class="dropdown" style="margin-left:1500px;margin-top:20px;" >
+          <img src="{% static 'set.png' %}" alt="Settings Image" style="height: 50px; width: 60px;">  
+          <button class="dropbtn" style="width:300px;">Settings</button>   
+          <div class="dropdown-content" style="width:300px;margin-left:65px;">     
+              <a href="{% url 'login'%}">Logout</a>
+              <a href="{% url 'signup'%}">Account</a>
+              <a href="{% url 'login'%}">Themes</a>
+          </div>
+      </div>
         <div style="width: 275px; height: 70px; left: 1118px; top: 480px; position: absolute">
           <div style="width: 275px; height: 70px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
-          <div style="left: 59.50px; top: 17.99px; position: absolute; color: #504A4A; font-size: 28px; font-family: Inter; font-weight: 600; word-wrap: break-word">mm/dd/yyy</div>
+          <input id="dateInput1" type="date" style="left: 59.50px; top: 17.99px; position: absolute; color: #504A4A; font-size: 28px; font-family: Inter; font-weight: 600; word-wrap: break-word;margin-left: -50px;"/>
         </div>
         <div style="width: 275px; height: 70px; left: 532px; top: 480px; position: absolute">
           <div style="width: 275px; height: 70px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
-          <div style="left: 59.50px; top: 17.99px; position: absolute; color: #504A4A; font-size: 28px; font-family: Inter; font-weight: 600; word-wrap: break-word">mm/dd/yyy</div>
+          <input id="dateInput2" type="date" style="left: 59.50px; top: 17.99px; position: absolute; color: #504A4A; font-size: 28px; font-family: Inter; font-weight: 600; word-wrap: break-wordl;margin-left: -50px;"/>
         </div>
-        <div style="width: 552px; height: 78.96px; left: 500px; top: 301px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
+        <div style="width: 552px; height: 78.96px; left: 500px; top: 301px; position: absolute; justify-content: center; align-items: center; display: inline-flex;background-color: white;">
             <div style="width: 552px; height: 78.96px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
                 <img style="width: 58.94px; height: 78.96px" src="https://via.placeholder.com/59x79" />
-                <div style="width: 552px; height: 77px; background: white; border-radius: 10px; border: 2px black solid"></div>
-                <input type="text" placeholder="From:" style="width: 400px; height: 40px; left: 100px; top: 20px; position: absolute; font-size: 18px; border: 1px solid #ccc; border-radius: 5px; padding: 5px;">
+           
+                <div class="autocomplete" style="margin-top: -78px;">
+                  <input id="cityInput" style="height:60px;width:535px;" type="text" placeholder="From:" onfocus="showDropdown()">
+                  <div id="cityDropdown" class="autocomplete-dropdown">
+                      <a href="#" onclick="selectCity('Karachi')">Karachi</a>
+                      <a href="#" onclick="selectCity('Lahore')">Lahore</a>
+                      <a href="#" onclick="selectCity('Islamabad')">Islamabad</a>
+                      <!-- Add more cities as needed -->
+                  </div>
+              </div>
             </div>
         </div>
+        <div class="topnav" style="max-width:10%;">
+          <a href="#home"  style="margin-left:100px;"></a>
+          <div id="myLinks" style="margin-top:15px;height:1000px;">
+            <a href="#news" style="margin-top:50px;font-size: x-large;">Cheap Rides to Lahore</a>
+      <a href="#contact" style="margin-top:50px;font-size: x-large;">Flights to Karachi Increase 10%</a>
+      <a href="#about" style="margin-top:50px;font-size: x-large;">Ever Tried Yango?</a>
+          </div>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars" style="font-size: x-large; position: relative;top:-15px;left: -150px;margin-left: 150px;">☰</i>
+          </a>
+        </div>
       </div>
+   
 </body>
+<script>
+    function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+    function showClock(type) {
+        var clock = document.getElementById(type + 'Clock');
+        clock.style.display = 'block';
+    }
+
+    function selectTime(type, time) {
+        var inputField = document.querySelector(`.${type}-selector input`);
+        inputField.value = time;
+        hideClock(type);
+    }
+
+    function hideClock(type) {
+        var clock = document.getElementById(type + 'Clock');
+        clock.style.display = 'none';
+    }
+
+    // Close the clock when clicking outside
+    document.addEventListener('click', function (event) {
+        if (!event.target.closest('.time-selector') && !event.target.matches('.time-selector input')) {
+            hideClock('departure');
+            hideClock('arrival');
+        }
+    });
+
+     function showDropdownTo() {
+            var dropdown = document.getElementById("cityToDropdown");
+            dropdown.style.display = "block";
+        }
+        function selectCityTo(city) {
+            var inputField = document.getElementById("cityToInput");
+            inputField.value = city;
+            var dropdown = document.getElementById("cityToDropdown");
+            dropdown.style.display = "none";
+        }
+     function showDropdown() {
+            var dropdown = document.getElementById("cityDropdown");
+            dropdown.style.display = "block";
+        }
+
+        function selectCity(city) {
+            var inputField = document.getElementById("cityInput");
+            inputField.value = city;
+            var dropdown = document.getElementById("cityDropdown");
+            dropdown.style.display = "none";
+        }
+  document.getElementById('dateInput1').addEventListener('click', function () {
+    this.focus();
+});
+
+// Function to open the date picker when clicking on the second image
+document.getElementById('dateInput2').addEventListener('click', function () {
+    this.focus();
+});
+</script>
 </html>
