--- a/WayToGlobe/maininterface/templates/search_place.html
+++ b/WayToGlobe/maininterface/templates/search_place.html
@@ -112,10 +112,12 @@
     <div style="width: 419.14px; height: 34.77px; left: 616.44px; top: 601.64px; position: absolute; color: white; font-size: 26px; font-family: Inter; font-weight: 600; word-wrap: break-word">From Date</div>
     <div style="width: 320px; height: 33.72px; left: 619.39px; top: 752.31px; position: absolute; color: white; font-size: 26px; font-family: Inter; font-weight: 600; word-wrap: break-word">To Date</div>
     <div style="width: 247.36px; height: 79.02px; left: 834.36px; top: 926.17px; position: absolute; background: rgba(0, 98, 227, 0.67); border-radius: 7px; border: 3px black solid"></div>
-    <div style="width: 118px; height: 36px; left: 911px; top: 948px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">search</div>
+    <div style="width: 118px; height: 36px; left: 911px; top: 948px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">
+        <a href="{% url 'search_place2'%}">search</a></div>
     <div style="width: 1138.65px; height: 83.24px; left: 373.01px; top: 251.82px; position: absolute; background: white; border-radius: 10px; border: 2px black solid"></div>
     <div style="width: 306.26px; height: 41.09px; left: 446.63px; top: 272.90px; position: absolute; color: #504A4A; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word">Booking Location</div>
-    <img style="width: 52.02px; height: 66.38px; left: 375.95px; top: 262.36px; position: absolute" src="https://via.placeholder.com/52x66" />
+   {% load static %}
+    <img style="width: 52.02px; height: 66.38px; left: 375.95px; top: 262.36px; position: absolute" src="{% static 'Clip.png' %}" />
     <div style="width: 509.45px; height: 32.66px; left: 508.47px; top: 402.50px; position: absolute; color: black; font-size: 26px; font-family: Inter; font-weight: 600; word-wrap: break-word">Rooms</div>
     <div id="increaseRoomsBtn" class="clickable" style="width: 10.80px; height: 41.09px; left: 1272.15px; top: 381.42px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word" onclick="changeNumber(1, 'rooms')">+</div>
     <div id="decreaseRoomsBtn" class="clickable" style="width: 62.82px; height: 41.09px; left: 1274.11px; top: 407.77px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word" onclick="changeNumber(-1, 'rooms')">-</div>
@@ -140,19 +142,21 @@
         </div>
     </div>
     <div style="width: 273.87px; height: 34.77px; left: 119.75px; top: 37.93px; position: absolute; color: black; font-size: 30px; font-family: Impact; font-weight: 400; word-wrap: break-word">Way To Globe</div>
-    <div style="width: 127.61px; height: 34.77px; left: 459.39px; top: 34.77px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Home</div>
+    <div style="width: 127.61px; height: 34.77px; left: 459.39px; top: 34.77px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">
+        <a href="{% url 'main_interface' %}">Home</a></div>
     <div style="width: 264.05px; height: 34.77px; left: 802.94px; top: 34.77px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Flight</div>
     <div style="width: 215.95px; height: 34.77px; left: 589.94px; top: 34.77px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Place</div>
     <div style="width: 215.95px; height: 34.77px; left: 1215.21px; top: 31.61px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">About Us</div>
-    <div style="width: 235.58px; height: 34.77px; left: 1023.80px; top: 31.61px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">Search Car</div>
+    <div style="width: 235.58px; height: 34.77px; left: 1023.80px; top: 31.61px; position: absolute; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">
+        <a href="{% url 'search_car' %}">Search Car</a></div>
     <div style="width: 79.51px; height: 75.86px; left: 22.58px; top: 16.86px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
     <div style="width: 90.31px; height: 25.29px; left: 16.69px; top: 41.09px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Imprima; font-weight: 400; word-wrap: break-word">Logo</div>
     <div class="topnav" style="max-width:10%;">
         <a href="#home"  style="margin-left:100px;"></a>
         <div id="myLinks" style="margin-top:15px;height:1000px;">
-          <a href="#news" style="margin-top:50px;font-size: x-large;">News</a>
-          <a href="#contact" style="margin-top:50px;font-size: x-large;">Contact</a>
-          <a href="#about" style="margin-top:50px;font-size: x-large;">About</a>
+            <a href="#news" style="margin-top:50px;font-size: x-large;">Cheap Rides to Lahore</a>
+      <a href="#contact" style="margin-top:50px;font-size: x-large;">Flights to Karachi Increase 10%</a>
+      <a href="#about" style="margin-top:50px;font-size: x-large;">Ever Tried Yango?</a>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars" style="font-size: x-large; position: relative;top:-15px;left: -150px;margin-left: 150px;">☰</i>
