--- a/WayToGlobe/authentication/templates/signup.html
+++ b/WayToGlobe/authentication/templates/signup.html
@@ -297,22 +297,22 @@
             
             <div class="email-label" >Email</div>
             <div class="email-input" >
-                <input style="font-size: large;height:40px;" type="text" class="form-control" name="{{ registration.email.name }}" id="email" required>
+                <input style="font-size: large;height:20px;" type="text" class="form-control" name="{{ registration.email.name }}" id="email" required>
             </div>
         
             <div class="email-label" style="margin-top: 100px; margin-left: 20px;">Username</div>
             <div class="email-input">
-                <input style="font-size: large; margin-top: 100px;height:40px;" type="text" class="form-control" name="{{ registration.username.name }}" id="username" required>
+                <input style="font-size: large; margin-top: 100px;height:20px;" type="text" class="form-control" name="{{ registration.username.name }}" id="username" required>
             </div>
         
-            <div class="password-label" style="margin-top: 70px; margin-left: 1px;">Password</div>
+            <div class="password-label" style="margin-top: 50px;margin-left: 1px;">Password</div>
             <div class="password-input">
-                <input style="font-size: large; margin-top: 100px;height:40px;" type="password" class="form-control" name="{{ registration.password1.name }}" id="password" required>
+                <input style="font-size: large; margin-top: 70px;height:40px;margin-right:-2px;" type="password" class="form-control" name="{{ registration.password1.name }}" id="password" required>
             </div>
         
-            <div class="password-label" style="margin-top: 150px; margin-left: 35px;">Confirm Password</div>
+            <div class="password-label" style="margin-top: 130px; margin-left: 38px;">Confirm Password</div>
             <div class="password-input">
-                <input style="font-size: large; margin-top: 250px;height:40px;" type="password" class="form-control" name="{{ registration.password2.name }}" id="confirm_password" required>
+                <input style="font-size: large; margin-top: 220px;height:40px;margin-right:-4px;" type="password" class="form-control" name="{{ registration.password2.name }}" id="confirm_password" required>
             </div>
         
             <input class="signin-button-container" type="submit" value="Sign Up" style="font-family: sans-serif; font-weight: 700; background-color:#0062E3;color: white; font-weight: 300; margin-top: 100px; font-size: x-large; margin-left: -5px;">
