--- a/WayToGlobe/maininterface/templates/index.html
+++ b/WayToGlobe/maininterface/templates/index.html
@@ -146,7 +146,7 @@
         </div>
         <div style="width: 220px; height: 33px; left: 598px; top: 28px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 220px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word; position: relative; z-index: 999;">
-                <a href="{% url 'search_place'%}">Search Place</a>
+                <a href="{% url 'search_place'%}" style="color:black;">Search Place</a>
             </div>
         </div>
         <div style="width: 151px; height: 33px; left: 1269px; top: 25px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
@@ -156,7 +156,7 @@
         </div>
         <div style="width: 240px; height: 33px; left: 1040px; top: 25px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
             <div style="width: 240px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word;z-index: 999;">
-                <a href="{% url 'search_car'%}">Search Car</a></div>
+                <a href="{% url 'search_car'%}"style="color:black;">Search Car</a></div>
         </div>
         <div style="width: 81px; height: 72px; left: 20px; top: 11px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
         <div style="width: 92px; height: 24px; left: 14px; top: 34px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Imprima; font-weight: 400; word-wrap: break-word">Logo</div>
@@ -165,7 +165,7 @@
         <div style="width: 881px; height: 670px; left: 964px; top: 372px; position: absolute; opacity: 0.40; background: rgba(0, 0, 0, 0.70); border-radius: 60px"></div>
         <div style="width: 890px; height: 168px; left: 515px; top: 157px; position: absolute; background: rgba(5, 32, 60, 0.80); border-radius: 84px"></div>
         <div style="width: 780px; height: 148px; left: 568px; top: 179px; position: absolute; text-align: center; color: white; font-size: 90px; font-family: Almendra SC; font-weight: 400; word-wrap: break-word">Good Evening!</div>
-        <div style="width: 431px; height: 67px; left: 1166px; top: 372px; position: absolute; text-align: center; color: black; font-size: 50px; font-family: Inder; font-weight: 400; letter-spacing: 2px; word-wrap: break-word">WE RECOMMEND</div>
+        <div style="width: 431px; height: 67px; left: 1166px; top: 372px; position: absolute; text-align: center; color: black; font-size: 50px; font-family: Inder; font-weight: 400; letter-spacing: 2px; word-wrap: break-word">Recommendations</div>
         {% comment %} Menubar {% endcomment %}
         <div style="width: 2160px; height: 101px; left: -2px; top: -6px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
         <div style="width: 752px; height: 425px; left: 173px; top: 372px; position: absolute; opacity: 0.40; background: rgba(26.18, 26.24, 27.82, 0.70); border-radius: 60px"></div>
@@ -195,7 +195,7 @@
             <div style="width: 766px; height: 45px; left: 56px; top: 56px; position: absolute; color: white; font-size: 50px; font-family: Inconsolata; font-weight: 700; word-wrap: break-word">Oceania Resort   $5000/night</div>
         </div>
     </div>
-    <div class="topnav" style="max-width:10%;">
+    <div class="topnav" style="max-width:10%;margin-top: 20px;">
         <a href="#home"  style="margin-left:100px;"></a>
         <div id="myLinks" style="margin-top:15px;height:1000px;">
             <a href="#news" style="margin-top:50px;font-size: x-large;">Cheap Rides to Lahore</a>
@@ -233,8 +233,8 @@
             var date = now.getDate();
             var year = now.getFullYear();
 
-            dateElement.innerHTML = `<span style="color: black; font-size: 50px; font-family: Inder; font-weight: 400;">${date} ${month} </span>` +
-                                    `<span style="color:black; font-size: 50px; font-family: Inder; font-weight: 400;">${year}<br/>${day}</span>`;
+            dateElement.innerHTML = `<span style="color: black; font-size: 50px; font-family: Inder;margin-left:20px; font-weight: 400;">${date} ${month} </span>` +
+                                    `<span style="color:black; font-size: 50px; font-family: Inder;margin-left:20px; font-weight: 400;">${year} ${day}</span>`;
         }
 
         setInterval(updateTime, 1000); // Update time every second
