--- a/WayToGlobe/maininterface/templates/search_car.html
+++ b/WayToGlobe/maininterface/templates/search_car.html
@@ -164,8 +164,8 @@
 <body>
     <div style="width: 1920px; height: 1080px; position: relative; background: white">
         <div style="width: 2160px; height: 101px; left: -2px; top: -6px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
-        <div style="width: 1562px; height: 883px; left: 300px; top: 152px; position: absolute; background: #05203C"></div>
-        <div style="left: 950px; top: 207px; position: absolute; text-align: center; color: white; font-size: 36px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">Search for Cars</div>
+        <div style="width: 1562px; height: 883px; left: 270px; top: 152px; position: absolute; background: #05203C"></div>
+        <div style="left: 820px; top: 207px; position: absolute; text-align: center; color: white; font-size: 36px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">Search for Cars</div>
         <div style="width: 69px; height: 72px; padding-top: 36px; padding-left: 23px; left: 0px; top: 101px; position: absolute; flex-direction: column; justify-content: flex-end; align-items: center; display: inline-flex">
 
         </div>
@@ -204,10 +204,10 @@
         <div style="width: 252px; height: 75px; left: 836px; top: 797px; position: absolute">
           <div style="width: 252px; height: 75px; left: 0px; top: 0px; position: absolute; background: #0062E3; border-radius: 7px; border: 3px #0062E3 solid"></div>
           <div style="left: 67px; top: 21px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; word-wrap: break-word">
-            <a href="{% url 'search_car2'%}">Search</a></div>
+            <a href="{% url 'search_car2'%}" style="color:white">Search</a></div>
         </div>
   
-        <div class="autocomplete" style="width: 552px; height: 78.96px; left: 1200px; top: 296px; position: absolute;margin-top:5px;">
+        <div class="autocomplete" style="width: 552px; height: 78.96px; left: 1000px; top: 296px; position: absolute;margin-top:5px;">
           <input id="cityToInput"style="height:60px;width:535px;" type="text" placeholder="To:" onfocus="showDropdownTo()">
           <div id="cityToDropdown" class="autocomplete-dropdown">
               <a href="#" onclick="selectCityTo('Karachi')">Karachi</a>
@@ -267,11 +267,10 @@
           <div style="width: 275px; height: 70px; left: 0px; top: 0px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
           <input id="dateInput2" type="date" style="left: 59.50px; top: 17.99px; position: absolute; color: #504A4A; font-size: 28px; font-family: Inter; font-weight: 600; word-wrap: break-wordl;margin-left: -50px;"/>
         </div>
-        <div style="width: 552px; height: 78.96px; left: 500px; top: 301px; position: absolute; justify-content: center; align-items: center; display: inline-flex;background-color: white;">
-            <div style="width: 552px; height: 78.96px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
-                <img style="width: 58.94px; height: 78.96px" src="https://via.placeholder.com/59x79" />
+        <div style="width: 552px; height: 78.96px; left: 500px; top: 341px; position: absolute; justify-content: center; align-items: center; display: inline-flex;">
            
-                <div class="autocomplete" style="margin-top: -78px;">
+ 
+                <div class="autocomplete" style="margin-top: -78px;left: -100px;">
                   <input id="cityInput" style="height:60px;width:535px;" type="text" placeholder="From:" onfocus="showDropdown()">
                   <div id="cityDropdown" class="autocomplete-dropdown">
                       <a href="#" onclick="selectCity('Karachi')">Karachi</a>
