--- a/WayToGlobe/maininterface/templates/search_car2.html
+++ b/WayToGlobe/maininterface/templates/search_car2.html
@@ -93,6 +93,44 @@
   background-color:  #05203C;
   color: white;
 }
+.dropbtn {
+    background-color: rgba(5, 32, 60, 0.80);
+    border-radius: 20px;
+      color: white;
+      padding: 16px;
+      font-size: 16px;
+      border: none;
+    }
+    
+    .dropdown {
+        border-radius: 20px;
+      position: relative;
+      display: inline-block;
+    }
+    
+    .dropdown-content {
+        border-radius: 20px;
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+    
+    .dropdown-content a {
+        border-radius: 20px;
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+    }
+    
+    .dropdown-content a:hover {background-color: #ddd;}
+    
+    .dropdown:hover .dropdown-content {display: block;}
+    
+    .dropdown:hover .dropbtn {background-color: #05203C;}
 </style>
 <body>
 <div style="width: 1911px; height: 1080px; position: relative;margin-left:80px; background: linear-gradient(90deg, #09090A 0%, #181719 37%, #36343B 100%, #39363D 100%)">
@@ -122,7 +160,7 @@
     <div style="width: 205px; height: 23px; left: 853px; top: 398px; position: absolute; text-align: center; color: rgba(0, 0, 0, 0.60); font-size: 32px; font-family: Inter; font-weight: 600; text-transform: capitalize; word-wrap: break-word">1h 00min</div>
     <div style="width: 252px; height: 75px; left: 839px; top: 916px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
       <div style="width: 252px; height: 75px; position: relative; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: flex">
-
+      
       </div>
     </div>
     <div style="width: 295px; height: 304px; left: 1649px; top: 24px; position: absolute">
@@ -146,11 +184,20 @@
         <div style="width: 40.44px; height: 40px; left: 26.28px; top: 29px; position: absolute; background: black"></div>
       </div>
     </div>
-    <div style="width: 69px; height: 72px; left: 0px; top: 100px; position: absolute">
-    
+    <div style="width: 69px; height: 72px; left: 0px; top: 70px; position: absolute">
+        {% load static %}   
+        <div class="dropdown" style="margin-left:1500px;margin-top:-400px;z-index: 999;" >
+            <img src="{% static 'set.png' %}" alt="Settings Image" style="height: 50px; width: 60px;">
+            <button class="dropbtn" style="width:300px;">Settings</button>
+            <div class="dropdown-content" style="width:300px;margin-left:65px;">        
+                <a href="{% url 'login'%}">Logout</a>
+                <a href="{% url 'signup'%}">Account</a>
+                <a href="{% url 'login'%}">Themes</a>
+            </div>
+        </div>
     </div>
-    <div style="width: 1920px; height: 101px; left: 0px; top: 0px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
-    <div style="width: 1920.03px; height: 0px; left: 1px; top: 101px; position: absolute; border: 2px black solid"></div>
+    <div style="width: 2120px; height: 105px; left: -100px; top: -5px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
+    <div style="width: 2120px; height: 0px; left: -100px; top: 101px; position: absolute; border: 2px black solid"></div>
     <div style="width: 279px; height: 33px; left: 120px; top: 35px; position: absolute; color: black; font-size: 30px; font-family: Impact; font-weight: 400; word-wrap: break-word">Way To Globe</div>
     <div style="width: 130px; height: 33px; left: 466px; top: 32px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
       <div style="width: 130px; height: 33px; text-align: center; color: black; font-size: 30px; font-family: Inder; font-weight: 400; word-wrap: break-word">
@@ -172,12 +219,12 @@
     <div style="width: 81px; height: 72px; left: 21px; top: 15px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
     <div style="width: 92px; height: 24px; left: 15px; top: 38px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Imprima; font-weight: 400; word-wrap: break-word">Logo</div>
    {% load static %}
-   <div class="topnav" style="max-width:10%;">
+   <div class="topnav" style="max-width:10%;top: 100px;">
     <a href="#home"  style="margin-left:100px;"></a>
     <div id="myLinks" style="margin-top:15px;height:1000px;">
-      <a href="#news" style="margin-top:50px;font-size: x-large;">News</a>
-      <a href="#contact" style="margin-top:50px;font-size: x-large;">Contact</a>
-      <a href="#about" style="margin-top:50px;font-size: x-large;">About</a>
+      <a href="#news" style="margin-top:50px;font-size: x-large;">Cheap Rides to Lahore</a>
+      <a href="#contact" style="margin-top:50px;font-size: x-large;">Flights to Karachi Increase 10%</a>
+      <a href="#about" style="margin-top:50px;font-size: x-large;">Ever Tried Yango?</a>
     </div>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
       <i class="fa fa-bars" style="font-size: x-large; position: relative;top:-15px;left: -150px;margin-left: 150px;">☰</i>
@@ -200,6 +247,14 @@
     }
     </script>
 <script>
+       function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
     let currentRooms = 2; // Initial number of rooms
     let currentTravelers = 2; // Initial number of travelers
 
