--- a/WayToGlobe/maininterface/templates/search_place.html
+++ b/WayToGlobe/maininterface/templates/search_place.html
@@ -93,11 +93,43 @@
   background-color:  #05203C;
   color: white;
 }
+.autocomplete {
+            position: relative;
+            display: inline-block;
+        }
+
+        input[type="text"] {
+            width: 400px;
+            height: 40px;
+            font-size: 18px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 5px;
+        }
+
+        .autocomplete-dropdown {
+            position: absolute;
+            top: 50px; /* Adjust the distance from the input */
+            left: 0;
+            background-color: white;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            display: none;
+            z-index: 1;
+        }
+
+        .autocomplete-dropdown a {
+            padding: 10px;
+            display: block;
+            text-decoration: none;
+            color: black;
+            cursor: pointer;
+        }
     </style>
-<div style="width: 1920px; height: 1080px;margin-left:85px; position: relative">
-    <div style="width: 1442.94px; height: 920.90px; left: 223.80px; top: 145.40px; position: absolute; background: #05203C; border-radius: 20px"></div>
-    <div style="width: 1884.66px; height: 107.47px; left: 0px; top: 0px; position: absolute; background: rgba(108, 112, 122, 0.30)"></div>
-    <div style="width: 337.67px; height: 72.70px; left: 789.20px; top: 179.12px; position: absolute; text-align: center; color: white; font-size: 36px; font-family: Inter; font-weight: 600; text-transform: capitalize; word-wrap: break-word">Search For Place</div>
+<div style="width: 1920px; height: 1080px;position: relative">
+    <div style="width: 2160px; height: 111px; left: -2px; top: -6px; position: absolute; background: rgba(108.44, 112.29, 122.19, 0.30); border: 1px rgba(0, 0, 0, 0.10) solid"></div>
+        <div style="width: 1562px; height: 883px; left: 150px; top: 152px; position: absolute; background: #05203C"></div>
+    <div style="width: 337.67px; height: 72.70px; left: 689.20px;top: 179.12px; position: absolute; text-align: center; color: white; font-size: 36px; font-family: Inter; font-weight: 600; text-transform: capitalize; word-wrap: break-word">Search For Place</div>
     <div style="width: 595.83px; height: 77.95px; left: 619.39px; top: 810.28px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
     <div style="width: 338px; height: 37.86px; left: 748.30px; top: 830.31px; position: absolute; color: rgba(80, 74, 74, 0.50); font-size: 28px; font-family: Inter; font-weight: 600; word-wrap: break-word">mm/dd/yyy</div>
     <div style="width: 595.83px; height: 77.95px; left: 616.44px; top: 644.61px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
@@ -113,26 +145,35 @@
     <div style="width: 320px; height: 33.72px; left: 619.39px; top: 752.31px; position: absolute; color: white; font-size: 26px; font-family: Inter; font-weight: 600; word-wrap: break-word">To Date</div>
     <div style="width: 247.36px; height: 79.02px; left: 834.36px; top: 926.17px; position: absolute; background: rgba(0, 98, 227, 0.67); border-radius: 7px; border: 3px black solid"></div>
     <div style="width: 118px; height: 36px; left: 911px; top: 948px; position: absolute; color: white; font-size: 28px; font-family: Inter; font-weight: 700; text-transform: capitalize; word-wrap: break-word">
-        <a href="{% url 'search_place2'%}">search</a></div>
+        <a href="{% url 'search_place2'%} " style="color:white">search</a></div>
     <div style="width: 1138.65px; height: 83.24px; left: 373.01px; top: 251.82px; position: absolute; background: white; border-radius: 10px; border: 2px black solid"></div>
-    <div style="width: 306.26px; height: 41.09px; left: 446.63px; top: 272.90px; position: absolute; color: #504A4A; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word">Booking Location</div>
+    <div class="autocomplete" style="width: 306.26px; height: 41.09px; left: 446.63px; top: 261.82px; position: absolute; color: #504A4A; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word">
+            <input id="cityInput" style="height:60px;width:535px;" type="text" placeholder="From:" onfocus="showDropdown()">
+            <div id="cityDropdown" class="autocomplete-dropdown">
+                <a href="#" onclick="selectCity('Karachi')">Karachi</a>
+                <a href="#" onclick="selectCity('Lahore')">Lahore</a>
+                <a href="#" onclick="selectCity('Islamabad')">Islamabad</a>
+                <!-- Add more cities as needed -->
+            </div>
+        </div>
+    </div>
    {% load static %}
-    <img style="width: 52.02px; height: 66.38px; left: 375.95px; top: 262.36px; position: absolute" src="{% static 'Clip.png' %}" />
+    <img style="width: 52.02px; height: 66.38px; left: 385.95px; top: 271.36px;border-radius: 10px;; position: absolute" src="{% static 'Clip.png' %}" />
     <div style="width: 509.45px; height: 32.66px; left: 508.47px; top: 402.50px; position: absolute; color: black; font-size: 26px; font-family: Inter; font-weight: 600; word-wrap: break-word">Rooms</div>
-    <div id="increaseRoomsBtn" class="clickable" style="width: 10.80px; height: 41.09px; left: 1272.15px; top: 381.42px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word" onclick="changeNumber(1, 'rooms')">+</div>
-    <div id="decreaseRoomsBtn" class="clickable" style="width: 62.82px; height: 41.09px; left: 1274.11px; top: 407.77px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word" onclick="changeNumber(-1, 'rooms')">-</div>
-    <div style="width: 538.90px; height: 72.70px; left: 496.69px; top: 487.84px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
+    <div id="increaseRoomsBtn" class="clickable" style="width: 10.80px; height: 41.09px; left: 1282.15px; top: 391.42px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word" onclick="changeNumber(1, 'rooms')">+</div>
+    <div id="decreaseRoomsBtn" class="clickable" style="width: 62.82px; height: 41.09px; left: 1284.11px; top: 420.77px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word" onclick="changeNumber(-1, 'rooms')">_</div>
+    <div style="width: 538.90px; height: 72.70px; left: 506.69px; top: 487.84px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
     <div style="width: 101.10px; height: 72.70px; left: 1122.94px; top: 494.17px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
     <div id="numberDisplayTravelers" style="width: 16.69px; height: 32.66px; left: 1165.15px; top: 514.19px; position: absolute; color: black; font-size: 26px; font-family: Inter; font-weight: 600; word-wrap: break-word">2</div>
     <div style="width: 69.69px; height: 36.88px; left: 1250.55px; top: 493.11px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
-    <div style="width: 509.45px; height: 32.66px; left: 508.47px; top: 507.86px; position: absolute; color: black; font-size: 26px; font-family: Inter; font-weight: 600; word-wrap: break-word">Travellers</div>
+    <div style="width: 509.45px; height: 32.66px; left: 518.47px; top: 507.86px; position: absolute; color: black; font-size: 26px; font-family: Inter; font-weight: 600; word-wrap: break-word">Travellers</div>
     <div style="width: 69.69px; height: 36.88px; left: 1250.55px; top: 529.99px; position: absolute; background: white; border-radius: 8px; border: 2px black solid"></div>
     <div id="increaseTravelersBtn" class="clickable" style="width: 10.80px; height: 41.09px; left: 1272.15px; top: 486.79px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word" onclick="changeNumber(1, 'travelers')">+</div>
     <div id="decreaseTravelersBtn" class="clickable" style="width: 62.82px; height: 41.09px; left: 1274.11px; top: 513.13px; position: absolute; color: black; font-size: 32px; font-family: Inter; font-weight: 600; word-wrap: break-word" onclick="changeNumber(-1, 'travelers')">_</div>
 
-    <div style="width: 1884.69px; height: 0px; left: 2.94px; top: 107.47px; position: absolute; border: 2px black solid"></div>
+    <div style="width: 2120.69px; height: 0px; left: 2.94px; top: 107.47px; position: absolute; border: 2px black solid"></div>
     {% load static %}   
-    <div class="dropdown" style="margin-left:1500px;margin-top:20px;" >
+    <div class="dropdown" style="margin-left:1500px;top: -1070px;" >
         <img src="{% static 'set.png' %}" alt="Settings Image" style="height: 50px; width: 60px;">  
         <button class="dropbtn" style="width:300px;">Settings</button>   
         <div class="dropdown-content" style="width:300px;margin-left:65px;">     
@@ -151,7 +192,7 @@
         <a href="{% url 'search_car' %}">Search Car</a></div>
     <div style="width: 79.51px; height: 75.86px; left: 22.58px; top: 16.86px; position: absolute; background: #D9D9D9; border-radius: 9999px"></div>
     <div style="width: 90.31px; height: 25.29px; left: 16.69px; top: 41.09px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: Imprima; font-weight: 400; word-wrap: break-word">Logo</div>
-    <div class="topnav" style="max-width:10%;">
+    <div class="topnav" style="max-width:10%;margin-top: 20px;top: -1070px;;">
         <a href="#home"  style="margin-left:100px;"></a>
         <div id="myLinks" style="margin-top:15px;height:1000px;">
             <a href="#news" style="margin-top:50px;font-size: x-large;">Cheap Rides to Lahore</a>
@@ -173,6 +214,17 @@
         }
         </script>
    <script>
+     function showDropdown() {
+            var dropdown = document.getElementById("cityDropdown");
+            dropdown.style.display = "block";
+        }
+
+        function selectCity(city) {
+            var inputField = document.getElementById("cityInput");
+            inputField.value = city;
+            var dropdown = document.getElementById("cityDropdown");
+            dropdown.style.display = "none";
+        }
         let currentRooms = 2; // Initial number of rooms
         let currentTravelers = 2; // Initial number of travelers
 
