--- a/WayToGlobe/authentication/templates/signup.html
+++ b/WayToGlobe/authentication/templates/signup.html
@@ -367,7 +367,7 @@
     function isValidUsername(username) {
         // Implement your username validation logic here
         // You may use a regular expression or other methods
-        return /^[a-zA-Z0-9]{4,}$/.test(username);
+        return /^[a-zA-Z0-9]+$/.test(username);
     }
 
     function isValidPassword(password) {
