--- a/WayToGlobe/authentication/templates/login.html
+++ b/WayToGlobe/authentication/templates/login.html
@@ -294,7 +294,7 @@
         </div>
         <form method="POST" action="{% url 'login' %}" autocomplete="off">
             {% csrf_token  %}
-            <div class="email-label">Email</div>
+            <div class="email-label" style="margin-left:20px;">Username</div>
             <div class="email-input">
                 <input  style="font-size:x-large" type="text"  class="form-control" name="{{ loginform.username.name }}" id="Username" required>
             </div>
@@ -305,10 +305,14 @@
                 </div>           
                 <input class="signin-button-container" type="submit" value="Sign in" style="font-family: sans-serif; font-weight: 700; background-color:#0062E3;color: white; font-weight: 300; margin-top: 250px; font-size: x-large; margin-left: 275px;height:60px;width:340px;">         
         </form>
-         
+        {% if error %}
+        <p class="error-message">{{ error }}</p>
+     {% endif %}
            
         </div>
-       
+       <script>
+        
+       </script>
     </div>
 </body>
 </html>
